--- a/data.html
+++ b/data.html
@@ -179,7 +179,7 @@
 </div>
 
 <nav class="mui-bar mui-bar-tab">
-    <a class="mui-tab-item" href="schedule.html">
+    <a class="mui-tab-item" href="index.html">
         <span class="mui-icon iconfont icon-activity" style="font-size: 600%; line-height: 80px"></span>
         <span class="mui-tab-label" style="font-size: 30px; padding-left: 70px">课表</span>
     </a>
